<resources>
    <string name="app_name">HwW2</string>
    <string name="android_developer_fundamentals">Android Developer Fundamentals</string>
    <string name="orangeString">This is an orange TextView</string>
    <string name="greenString">This is a green TextView</string>
    <string name="blueString">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="auto_backup">Auto backup</string>
    <string name="notify_me">Notify me :)</string>
</resources>
